--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ certifi==2017.7.27.1
 chardet==3.0.4
 Django==1.11.3
 django-autoslug==1.9.3
+django-braces==1.11.0
 django-picklefield==1.0.0
 django-q==0.8.0
+django-webpack-loader==0.5.0
+djangorestframework==3.6.3
 future==0.16.0
 idna==2.5
 olefile==0.44
